# zeroOs

./: CMakeLists.txt  build.sh
libs/ST7789/: CMakeLists.txt  ST7789.cpp  ST7789.h  ST7789CONF.h
libs/zGfx/: CMakeLists.txt  canvas.cpp  colors.cpp  zGfx.cpp  zGfx.h
src/: main.cpp
